fixed flex wrap issue on contact me section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,18 +59,17 @@ h2 {
 }
 
 main {
-    padding-right: 35px;
+    padding-right: 45px;
 }
 
 .about-me, .work, .contact-me {
     display: flex;
     flex-wrap: wrap;
     margin: 15px 0;
-
 }
 
 .about-me h2, .work h2, .contact-me h2 {
-    flex: 1 0 15%;
+    flex: 1 0 20%;
     text-align: right;
     padding: 10px;
     color: var(--purple);
@@ -78,7 +77,7 @@ main {
 }
 
 .about-me p {
-    flex: 1 0 85%;
+    flex: 1 0 80%;
     padding: 10px 25px;
 }
 
@@ -86,16 +85,12 @@ main {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    flex: 1 0 85%;
-    /* background-color: var(--light-purple); */
+    flex: 1 0 80%;
     height: 500px;
 }
 
 .first-work, .other-work {
-    /* flex: 1 0 80%; */
-    /* background-color: var(--light-purple); */
     height: 50%;
-    
 }
 
 .first-item {
@@ -124,7 +119,9 @@ main {
 }
 
 .contacts {
-    flex: 1 0 85%;
+    flex: 1 1 80%;
+    /* display: flex;
+    justify-content: space-evenly; */
 }
 
 .contacts ul {
@@ -133,12 +130,11 @@ main {
 }
 
 .contact-me ul li {
-    display: inline;
-    padding: 0 5px;
+    /* display: inline; */
     color: var(--purple);
     flex: 1 0 33.3333%;
-    height: 50px;
-    line-height: 55px;
+    height: 100%;
+    line-height: 85px;
     font-size: 110%;
     text-align: center;
 }
@@ -148,35 +144,4 @@ main {
     display: inline;
 }
 
-
-/* .work-items {
-    display: flex;
-    flex-wrap: wrap;
-} */
-
-/* 
-.work-items section article .first-work {
-    margin: 20px 0 20px 20px;
-    width: 100%;
-    height: 450px;
-} */
-
-
-/* 
-.first-work {
-    height: 50%;
-}
-
-.other-work {
-    background-color: var(--light-purple);
-    margin: 10px;
-    height: 50%; 
-} */
-
-/* .work-items section article {
-    background-color: var(--light-purple);
-    margin: 10px;
-    height: 100%;
-    line-height: 50px;
-} */
 
